Fixed button width on mobile

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -120,6 +120,7 @@
   .button-big {
     width: 100%;
     height: 80px;
+    min-width: 0;
   }
   .button-big div {
     font-size: 18px;
@@ -128,6 +129,7 @@
   .button {
     width: 100%;
     height: 43px;
+    min-width: 0;
   }
   .button div {
     font-size: 15px;
